...
            shadow.android,
            animatedStyle,
         ]}
      >
         <TextInput
            ref={setRefs}
            testID="entry-input"
            placeholder={placeholder ?? t('common.enter_here')}
            value={value}
            onChangeText={onChangeText}
            autoCorrect={autoCorrect}
            // Compact vs Standard Text Size
            className="flex-1 text-slate-900 dark:text-slate-100"
...
